src/main/java/com/example/YNN/error/CustomException.java
package com.example.YNN.error;

import com.example.YNN.constants.ErrorCode;
import lombok.AllArgsConstructor;
import lombok.Getter;

@AllArgsConstructor
@Getter
public class CustomException extends RuntimeException{
    private final ErrorCode errorCode;
    private final String message;
}
